# gdv-engine

./: README.md
editor/: .gitignore  App.xaml  App.xaml.cs  Directory.Build.props  Directory.Packages.props  MainWindow.xaml  MainWindow.xaml.cs  editor.sln  global.json
editor/.run/: editor.run.xml
editor/GameProject/: NewProjectView.xaml  NewProjectView.xaml.cs  OpenProjectView.xaml  OpenProjectView.xaml.cs  ProjectBrowserDialog.xaml  ProjectBrowserDialog.xaml.cs
editor/editor/: App.xaml  App.xaml.cs  GlobalUsings.cs  MainPage.cs  Package.appxmanifest  app.manifest  editor.csproj
editor/editor/Assets/: SharedAssets.md
editor/editor/Properties/: launchSettings.json
editor/editor/Properties/PublishProfiles/: win-arm64.pubxml  win-x86.pubxml
editor/editor/Strings/en/: Resources.resw
engine/: .gitignore  CMakeLists.txt
engine/include/: window.h
engine/src/: window.cpp
src/: main.cpp
